# async-api

./: .gitignore  README.md  main.py  markdown.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: buy_me_a_coffee.py  cat_and_dogs.py
pysdk/: __init__.py  baseclass.py  metaclass.py  method_template.txt
pysdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pysdk/: __init__.py  baseclass.py  import_template.jinja  metaclass.py  method_template.jinja  method_template.txt  restricted_parameters.py  utils.py
src/pysdk/templates/: body_template.jinja  method_template.jinja
