
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysdk"
version = "0.0.1"
description = "Universal SDK for api integrations"
authors = [
    { name = "Jeroen Vermunt"}
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["sdk", "api", "integration", "universal"]
dependencies = [
    "jinja2",
    "aiohttp"
]

[tool.setuptools.packages.find]
where = ["src"]

