[metadata]
name = pysdk
description = Universal SDK for api integrations
version = 0.0.1
author = Jeroen Vermunt
# license
# license_file
platforms = linux

[options]
packages = 

    pysdk
    

install_requires = 
    Jinja2>=3
    aiohttp>=3

python_requires = >=3.7
package_dir = 
    =.
zip_safe = no

[flake8]
max-line-length = 79
